// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp should render GifExpertApp component 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Avengers"
      key="Avengers"
    />
  </ol>
</Fragment>
`;

exports[`GifExpertApp should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Avengers"
      key="Avengers"
    />
    <GifGrid
      category="Messi"
      key="Messi"
    />
  </ol>
</Fragment>
`;
